# openapv

./: .clang-format  CMakeLists.txt  LICENSE  README.md  version.txt  windows_x86_64_toolchain.cmake
.github/workflows/: build.yml  release_packages.yml
app/: CMakeLists.txt  oapv_app_args.h  oapv_app_dec.c  oapv_app_enc.c  oapv_app_util.h  oapv_app_y4m.h
inc/: oapv.h
pkgconfig/: oapv.pc.in
readme/: apv_isobmff.md  empty.txt
src/: CMakeLists.txt  oapv.c  oapv_bs.c  oapv_bs.h  oapv_def.h  oapv_metadata.c  oapv_metadata.h  oapv_port.c  oapv_port.h  oapv_rc.c  oapv_rc.h  oapv_sad.c  oapv_sad.h  oapv_tbl.c  oapv_tbl.h  oapv_tpool.c  oapv_tpool.h  oapv_tq.c  oapv_tq.h  oapv_util.c  oapv_util.h  oapv_vlc.c  oapv_vlc.h
src/avx/: oapv_sad_avx.c  oapv_sad_avx.h  oapv_tq_avx.c  oapv_tq_avx.h
src/neon/: oapv_sad_neon.c  oapv_sad_neon.h  oapv_tq_neon.c  oapv_tq_neon.h
src/sse/: oapv_sad_sse.c  oapv_sad_sse.h  oapv_tq_sse.c  oapv_tq_sse.h
test/: README.md
test/bitstream/: qp_D.apv
